# bio-experiments

./: README.md  bio-experiments.cabal  stack.yaml
src/Bio/Data/: Experiment.hs
src/Bio/Data/Experiment/: ATACSeq.hs  File.hs  Parser.hs  RNASeq.hs  Replicate.hs  Types.hs
tests/: Test.hs
