name:                bio-experiments
version:             0.1.0
-- synopsis:
-- description:
homepage:            NONE
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Bio.Data.Experiment
                       Bio.Data.Experiment.Types
                       Bio.Data.Experiment.File
                       Bio.Data.Experiment.Replicate
                       Bio.Data.Experiment.RNASeq
                       Bio.Data.Experiment.ATACSeq
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , cereal
                     , cereal-text
                     , containers
                     , lens
                     , hvect
                     , text
                     , tagged
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bio-experiments
