name:                bio-experiments
version:             0.2.0
-- synopsis:
-- description:
homepage:            NONE
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2019 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Bio.Data.Experiment
                       Bio.Data.Experiment.Types
                       Bio.Data.Experiment.File
                       Bio.Data.Experiment.Replicate
                       Bio.Data.Experiment.Parser
  build-depends:       base == 4.*
                     , binary
                     , aeson
                     , case-insensitive
                     , containers
                     , microlens
                     , microlens-th
                     , text
                     , singletons >= 2.5
                     , unordered-containers
                     , yaml
                     , vector
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
 -- other-modules:

  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , tasty
                     , tasty-hunit
                     , singletons
                     , bio-experiments

source-repository head
  type:     git
  location: https://github.com/githubuser/bio-experiments
